2012-11-28  Markus Trippelsdorf  <markus@trippelsdorf.de>

	PR other/55358
	* dse.c (rest_of_handle_dse): Remove superfluous clearing.

2012-11-28  Joern Rennecke  <joern.rennecke@embecosm.com>

	* config/epiphany/predicates.md (move_double_src_operand):
	Check that misaligned addresses are offsettable.
	(move_dest_operand): Likewise.
	* config/epiphany/epiphany.c (REG_OK_FOR_BASE_P): Don't force a
	misaligned stack address to reg+index.

	* config/epiphany/epiphany.opt (mfp-iarith): New option.
	* config/epiphany/epiphgany.md (addsi3): Check for TARGET_FP_IARITH.
	(subsi3, iadd, isub): Rename to ..
	(subsi3_i, iadd_i, isub_i): .. This.
	(subsi3, iadd, isub): New define_expands.

	* config/epiphany/epiphgany.md (attribute type): Add v2fp.
	(attribute fp_mode): Test for v2fp.
	(<float_operation:insn_opname>v2sf3_i): Change type to v2fp.
	* config/epiphany/epiphgany-sched.md (fp_arith_nearest, fp_arith_trunc):
	Combine to ..
	(fp_arith): .. this. 
	(v2fp_arith): New insn reservation.

	* config/epiphany/epiphgany.md (maddsi_combine): Fix output pattern.

2012-11-28  Oleg Raikhman  <oleg@adapteva.com>

	* config/epiphany/epiphany.h (ASM_OUTPUT_ALIGN_WITH_NOP): Define.

2012-11-28  Joern Rennecke  <joern.rennecke@embecosm.com>

	* config/epiphany/epiphany.h (HARD_REGNO_RENAME_OK): Define.
	* config/epiphany/epiphany-protos.h (epiphany_regno_rename_ok): Declare.
	* config/epiphany/epiphany.c (epiphany_regno_rename_ok): New function.

	* config/epiphany/epiphany.md (mov<mode>, *mov<mode>_insn): Check
	for misaligned memory operands.
	* config/epiphany/predicates.md (misaligned_operand): New predicate.

	* config/epiphany/epiphany.opt (-may-round-for-trunc): New option.
	* config/epiphany/epiphany.md (*fix_truncsfsi2_i): Take it into account.

2012-11-28  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/54547
	* tree-vrp.c (set_and_canonicalize_value_range): Handle
	1-bit anti-ranges explicitely.
	(extract_range_from_assert): Properly canonicalize all